# jmapsyncd

./: Cargo.toml  PLAN.md  README.md  TODO.md
src/: args.rs  config.rs  lib.rs  logging.rs
src/db/: mod.rs  models.rs
src/jmap/: mod.rs
src/maildir/: filename.rs  mod.rs
src/sync/: email.rs  mailbox.rs  mod.rs
