[package]
name = "jmapsyncd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
anyhow = "1"
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
jmap-client = "0.2"
notify = "7"
maildir = "0.4"
globset = "0.4"
shellexpand = "3"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
serde_rusqlite = "0.35"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
